--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Millions-from-Waste_67837
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 67837-h/images/cover.jpg
 creator:
   author:
     agent_name: Talbot, Frederick Arthur Ambrose
@@ -9,6 +12,8 @@ creator:
     gutenberg_agent_id: '417'
     url: http://www.gutenberg.org/2009/agents/417
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/67837#Millions-from-Waste
 gutenberg_issued: '2022-04-15'
 identifiers:
   gutenberg: '67837'
